--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <body>
     <div id="instructions">
-        <h1>Ratatatap</h1>
+        <h1>Ratatap</h1>
         <div id="subText">
             <p>Press any letter key to trigger both a sound and randomly placed animation.</p>
             <p>Press 'Space' to begin.</p>
