--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.1/howler.core.min.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Oswald" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-    <title>Patatap Clone</title>
+    <title>Ratatap</title>
     <script type="text/paperscript" canvas="myCanvas">
 
         var active = false;
